finished top part of homepage

--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London-master/default.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London-master/default.hbs
@@ -37,15 +37,21 @@
     <div class="navbar-start">
     </div>
       
+    </div> 
+      <a class="navbar-item" href="https://www.quikpath.io/">
+        QuikPath
+      </a>
+
     <div class="navbar-item">
       <div class="field is-grouped">
         <p class="control">
-          <a class="button polly-button-green" href="https://www.quikpath.io/">
-            <span>Explore QuikPath</span>
+          <a class="button header-button" href="#">
+            <span>Subscribe</span>
           </a>
         </p>
       </div>
     </div>
+
 </nav>
 
         {{!-- <header class="site-head">
@@ -92,7 +98,7 @@
 
         {{!-- The footer at the very bottom of the screen --}}
         <footer class="site-foot">
-            &copy; Copyright QuikPath
+            <h1 class="is-size-7"> &copy; Copyright QuikPath </h1>
         </footer>
 
 
