--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London-master/index.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London-master/index.hbs
@@ -2,43 +2,50 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-<img src="/assets/bg.png" alt="" />
-<div class="site-wrapper">
-
+  <img src="/assets/bg.png" alt="" />
     {{#is "home"}}
-        <div class="container">
-          <div class="columns is-centered">
-            <div class="column is-half">
-              <article class="tile is-child notification is-light">
-                <p class="subtitle">The pulse of Food Manufacturing, Retail, and Safety</p>
-                <p>One newsletter each month with just enough news, analysis, and insights to keep food professionals ahead of the curve</p>
-                <br>
-                <form action="https://quikpath.us4.list-manage.com/subscribe/post?u=82e4f4d92d8a4867d8d765536&amp;id=5f129832af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div class="field">
-                        <div class="control">
-                            <input class="input required email" placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" >
+
+      <div class="section">
+        <div class="columns is-centered">
+          <div class="column is-7">
+            <article class="tile is-child notification is-light">
+              <p class="subtitle is-size-4 has-text-centered">The pulse of food <span style="color:#9849A5">m</span>anufacturing, <span style="color:#9849A5">r</span>etail, and <span style="color:#9849A5">s</span>afety</p>
+              <div class="columns is-centered">
+                <div class="column is-10">
+                  <p class="has-text-centered">One monthly newsletter bursting with analysis and insights - so food professionals can stay ahead of the curve</p>
+                  <br>
+                  <div class="columns is-centered">
+                    <div class="column is-6">
+                      <form action="https://quikpath.us4.list-manage.com/subscribe/post?u=82e4f4d92d8a4867d8d765536&amp;id=5f129832af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div class="field has-addons">
+                          <div class="control">
+                            <input class="input is-small" placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" >
+                          </div>
+                          <div class="control">
+                            <button class="button subscribe-button is-small" type="submit">Subscribe</button>
+                          </div>
                         </div>
+                      </form>
                     </div>
-                    <div class="field">
-                        <div class="control has-text-left">
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3c3e68a463cd5f23b2f8b59f5_a51230eff6" tabindex="-1" value=""></div>
-                        <button class="polly-button-green-small button" type="submit">Subscribe</button>
-                        </div>
-                    </div>
-                </form>
-              </article>
-            </div>
+                  </div>
+                </div>
+              </div>
+            </article>
           </div>
         </div>
+      </div>
     {{/is}}
 
-    <div class="post-feed">
-        {{#foreach posts}}
+    <h1 class="has-text-centered is-size-4">
+      Recent posts
+    </h1>
 
-            {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-            {{> "post-card"}}
+    <div class="section">
+      {{#foreach posts}}
 
-        {{/foreach}}
+        {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+        {{> "post-card"}}
+
+      {{/foreach}}
     </div>
-</div>
 
