--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
@@ -67,26 +67,17 @@
                     </div>
                   </div>
                 </a>
-                {{!-- <div class="site-head-left"> 
-                </div> --}}
+
                 <div class="navbar-brand">
                   <a class="navbar-item" href="/mrsfood">
                     <img src="/mrsfood/assets/images/mrs_food_logo.svg" alt="Mrs. Food" height="30" />
                   </a>   
                 </div>
 
-
-
-                {{!-- <div class="site-head-center">
-                    {{#if @site.logo}}
-                    <a class="site-head-logo" href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" /></a>
-                    {{else}}
-                    <a class="site-head-logo" href="{{@site.url}}">{{@site.title}}</a>
-                    {{/if}}
-                </div> --}}
-                {{!-- <div class="site-head-right"> --}}
                 <div class="navbar-end">
-                    {{navigation}}
+                  <a class="navbar-item" href="https://www.quikpath.io/">
+                    QuikPath
+                  </a>
                   <div class="navbar-item">
                     <div class="field is-grouped">
                       <p class="control">
@@ -97,13 +88,8 @@
                     </div>
                   </div>
                 </div>
-                {{!-- </div> --}}
               </div>
             </header>
-
-
-    
-
 
 
         <main id="site-main" class="site-main">
