changed fixed navbar to increase padding at top of body

--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "built/mystyles.css"}}" />
 
 </head>
-<body class="{{body_class}}">
+<body class="{{body_class}} has-navbar-fixed-top">
   
   
   {{!-- <nav class="MainMenu navbar is-fixed-top" id="swup">
@@ -81,7 +81,7 @@
                   <div class="navbar-item">
                     <div class="field is-grouped">
                       <p class="control">
-                        <a class="button header-button" href="#subbutton">
+                        <a class="button header-button" href="/mrsfood/#subbutton">
                           Subscribe
                         </a>
                       </p>
