changed the form sign up to other mailchimp

--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/default.hbs
@@ -74,18 +74,16 @@
                   </a>   
                 </div>
 
+                <div class="navbar-start">
+                </div>
                 <div class="navbar-end">
-                  <a class="navbar-item" href="https://www.quikpath.io/">
+                  <a class="navbar-item right-menu" href="https://www.quikpath.io/">
                     QuikPath
                   </a>
-                  <div class="navbar-item">
-                    <div class="field is-grouped">
-                      <p class="control">
-                        <a class="button header-button" href="/mrsfood/#subbutton">
-                          Subscribe
-                        </a>
-                      </p>
-                    </div>
+                  <div class="navbar-item right-menu">
+                    <a class="button header-button" href="/mrsfood/#subbutton">
+                      Subscribe
+                    </a>
                   </div>
                 </div>
               </div>
