--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/index.hbs
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/London/index.hbs
@@ -16,20 +16,20 @@ into the {body} of the default.hbs template --}}
             <div class="column">
                 <p id="subbutton" class="is-size-2 has-text-centered">The pulse of food <span style="color:#9849A5">m</span>anufacturing, <span style="color:#9849A5">r</span>etail, and <span style="color:#9849A5">s</span>afety</p>
                 <div class="columns is-centered">
-                    <div class="column is-6">
+                    <div class="column is-8">
                         <br>
                     <p class="is-size-5 has-text-centered">One monthly newsletter bursting with analysis and insights to keep food professionals ahead of the curve</p>
                     <br>
                     <div class="columns is-centered">
-                        <div class="column is-6">
-                        <form action="https://quikpath.us4.list-manage.com/subscribe/post?u=82e4f4d92d8a4867d8d765536&amp;id=5f129832af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <div class="field has-addons">
-                            <div class="control">
+                        <div class="column is-8">    
+                        <form action="https://quikpath.us4.list-manage.com/subscribe/post?u=a384852a7c523b2e8288bb2a5&amp;id=67e6451b12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>    
+                            <div class="field has-addons has-addons-centered">
+                              <div class="control">
                                 <input class="input" placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" >
-                            </div>
-                            <div class="control">
+                              </div>
+                              <div class="control">
                                 <button class="button header-button" type="submit">Subscribe</button>
-                            </div>
+                              </div>
                             </div>
                         </form>
                         </div>
@@ -54,3 +54,17 @@ into the {body} of the default.hbs template --}}
     </div>
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
