--- a/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/Meraj/sass/mystyles.scss
+++ b/Desktop/Work/QuikPath Rapid Testing/Website/ghostapp/content/themes/Meraj/sass/mystyles.scss
@@ -349,7 +349,10 @@ color: white;
     background: linear-gradient(150deg, #6222b5 15%, #9849A5 50%, rgb(196, 16, 224) 94%); // green
 }
 
-
 .bgpic {
     width: 100%;
+}
+
+.right-menu {
+    display: inline-block;
 }
